--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-﻿blinker==1.9.0
+blinker==1.9.0
 click==8.2.1
 colorama==0.4.6
 Flask==3.1.1
@@ -8,4 +8,5 @@ Jinja2==3.1.6
 MarkupSafe==3.0.2
 Werkzeug==3.1.3
 gunicorn==21.2.0
-Flask-JWT-Extended
+Flask-JWT-Extended==4.4.0  
+psycopg2-binary==2.9.9    
